--- a/index.css
+++ b/index.css
@@ -1,5 +1,12 @@
+a {
+  text-decoration: none;
+}
+
+strong {
+  font-weight: 800;
+}
+
 .hero {
-  margin-top: 5px;
   height: 100vh;
   background: url(https://assets.awwwards.com/awards/media/cache/optimize/sites_of_the_day/2019/10/laguta.jpg);
   background-repeat: no-repeat;
@@ -7,13 +14,108 @@
 }
 
 .navbar-lg {
+  height: 70px;
   background-color: white;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
 }
 
-.hero-buttons,
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+.register-login {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 30px;
+  font-weight: bold;
+}
+
+.register-login a:hover {
+  color: #555;
+}
+.green-bg {
+  background-color: #49c5b6;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+}
+
+.green-bg a {
+  position: absolute;
+  color: white;
+  padding: 25px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  color: white;
+  height: 490px;
+}
+
+.hero-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.hero-buttons div {
+  height: 50px;
+}
+
+.hero-date {
+  position: absolute;
+  left: 0;
+  padding-left: 2rem;
+  font-size: 1rem;
+}
+
+.hero-info .title {
+  font-size: 3.1rem;
+  font-weight: 900;
+  padding-top: 80px;
+}
+
+.hero-info p {
+  font-size: 1.1rem;
+}
+.hero-info p span {
+  color: #49c5b6;
+}
+
+.hero-buttons .btn {
+  padding: 18px;
+  font-size: 1rem;
+}
+
+.top-header .row {
+  height: 70px;
+  border-bottom: 1px solid #e6eaea;
+  align-items: center;
+}
+
+.top-header > div {
+  text-align: center;
+  color: #202121;
+}
+
+.top-header .row p {
+  text-decoration: underline solid #999;
+  cursor: pointer;
+}
+
+.social-icons {
+  justify-content: flex-end;
+}
+
+.icon-link {
+  padding-right: 0.7rem;
+}
+
 .f-left,
 .f-right {
   justify-content: right;
