--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 .row {
   display: flex;
   align-items: center;
-  justify-content: space-around; }
+  justify-content: space-between; }
 
 .col-sm-1 {
   flex-basis: 8.3333333333%; }
@@ -570,7 +570,7 @@
   left: 0;
   z-index: 1; }
 
-.w-100 {
-  width: 100%; }
+.center {
+  margin: 0 auto; }
 
 /*# sourceMappingURL=style.css.map */
