--- a/style.css
+++ b/style.css
@@ -1,524 +1,721 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .container {
   min-width: 1020px;
-  margin: 0 auto; }
-  .container--fluid {
-    margin: 0;
-    max-width: 100%; }
-  .container__row {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%; }
+  margin: 0 auto;
+}
+.container--fluid {
+  margin: 0;
+  max-width: 100%;
+}
+.container__row {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
 
 .row {
   display: flex;
   align-items: center;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
 .col-sm-1 {
-  flex-basis: 8.3333333333%; }
+  flex-basis: 8.3333333333%;
+}
 
 .col-sm-2 {
-  flex-basis: 16.6666666667%; }
+  flex-basis: 16.6666666667%;
+}
 
 .col-sm-3 {
-  flex-basis: 25%; }
+  flex-basis: 25%;
+}
 
 .col-sm-4 {
-  flex-basis: 33.3333333333%; }
+  flex-basis: 33.3333333333%;
+}
 
 .col-sm-5 {
-  flex-basis: 41.6666666667%; }
+  flex-basis: 41.6666666667%;
+}
 
 .col-sm-6 {
-  flex-basis: 50%; }
+  flex-basis: 50%;
+}
 
 .col-sm-7 {
-  flex-basis: 58.3333333333%; }
+  flex-basis: 58.3333333333%;
+}
 
 .col-sm-8 {
-  flex-basis: 66.6666666667%; }
+  flex-basis: 66.6666666667%;
+}
 
 .col-sm-9 {
-  flex-basis: 75%; }
+  flex-basis: 75%;
+}
 
 .col-sm-10 {
-  flex-basis: 83.3333333333%; }
+  flex-basis: 83.3333333333%;
+}
 
 .col-sm-11 {
-  flex-basis: 91.6666666667%; }
+  flex-basis: 91.6666666667%;
+}
 
 .col-sm-12 {
-  flex-basis: 100%; }
+  flex-basis: 100%;
+}
+
+.d-sm-block {
+  display: block;
+}
+
+.d-sm-none {
+  display: none;
+}
 
 @media screen and (min-width: 720px) {
   .col-md-1 {
-    flex-basis: 8.3333333333%; }
+    flex-basis: 8.3333333333%;
+  }
 
   .col-md-2 {
-    flex-basis: 16.6666666667%; }
+    flex-basis: 16.6666666667%;
+  }
 
   .col-md-3 {
-    flex-basis: 25%; }
+    flex-basis: 25%;
+  }
 
   .col-md-4 {
-    flex-basis: 33.3333333333%; }
+    flex-basis: 33.3333333333%;
+  }
 
   .col-md-5 {
-    flex-basis: 41.6666666667%; }
+    flex-basis: 41.6666666667%;
+  }
 
   .col-md-6 {
-    flex-basis: 50%; }
+    flex-basis: 50%;
+  }
 
   .col-md-7 {
-    flex-basis: 58.3333333333%; }
+    flex-basis: 58.3333333333%;
+  }
 
   .col-md-8 {
-    flex-basis: 66.6666666667%; }
+    flex-basis: 66.6666666667%;
+  }
 
   .col-md-9 {
-    flex-basis: 75%; }
+    flex-basis: 75%;
+  }
 
   .col-md-10 {
-    flex-basis: 83.3333333333%; }
+    flex-basis: 83.3333333333%;
+  }
 
   .col-md-11 {
-    flex-basis: 91.6666666667%; }
+    flex-basis: 91.6666666667%;
+  }
 
   .col-md-12 {
-    flex-basis: 100%; } }
+    flex-basis: 100%;
+  }
+
+  .d-md-block {
+    display: block;
+  }
+  .d-md-none {
+    display: none;
+  }
+}
 @media screen and (min-width: 1020px) {
   .col-lg-1 {
-    flex-basis: 8.3333333333%; }
+    flex-basis: 8.3333333333%;
+  }
 
   .col-lg-2 {
-    flex-basis: 16.6666666667%; }
+    flex-basis: 16.6666666667%;
+  }
 
   .col-lg-3 {
-    flex-basis: 25%; }
+    flex-basis: 25%;
+  }
 
   .col-lg-4 {
-    flex-basis: 33.3333333333%; }
+    flex-basis: 33.3333333333%;
+  }
 
   .col-lg-5 {
-    flex-basis: 41.6666666667%; }
+    flex-basis: 41.6666666667%;
+  }
 
   .col-lg-6 {
-    flex-basis: 50%; }
+    flex-basis: 50%;
+  }
 
   .col-lg-7 {
-    flex-basis: 58.3333333333%; }
+    flex-basis: 58.3333333333%;
+  }
 
   .col-lg-8 {
-    flex-basis: 66.6666666667%; }
+    flex-basis: 66.6666666667%;
+  }
 
   .col-lg-9 {
-    flex-basis: 75%; }
+    flex-basis: 75%;
+  }
 
   .col-lg-10 {
-    flex-basis: 83.3333333333%; }
+    flex-basis: 83.3333333333%;
+  }
 
   .col-lg-11 {
-    flex-basis: 91.6666666667%; }
+    flex-basis: 91.6666666667%;
+  }
 
   .col-lg-12 {
-    flex-basis: 100%; } }
+    flex-basis: 100%;
+  }
+
+  .d-lg-block {
+    display: block;
+  }
+
+  .d-lg-none {
+    display: none;
+  }
+}
 .m-t-0 {
-  margin-top: 0px; }
+  margin-top: 0px;
+}
 
 .m-t-5 {
-  margin-top: 5px; }
+  margin-top: 5px;
+}
 
 .m-t-10 {
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
 .m-t-15 {
-  margin-top: 15px; }
+  margin-top: 15px;
+}
 
 .m-t-20 {
-  margin-top: 20px; }
+  margin-top: 20px;
+}
 
 .m-t-25 {
-  margin-top: 25px; }
+  margin-top: 25px;
+}
 
 .m-t-30 {
-  margin-top: 30px; }
+  margin-top: 30px;
+}
 
 .m-t-35 {
-  margin-top: 35px; }
+  margin-top: 35px;
+}
 
 .m-t-40 {
-  margin-top: 40px; }
+  margin-top: 40px;
+}
 
 .m-t-45 {
-  margin-top: 45px; }
+  margin-top: 45px;
+}
 
 .m-t-50 {
-  margin-top: 50px; }
+  margin-top: 50px;
+}
 
 .m-r-0 {
-  margin-right: 0px; }
+  margin-right: 0px;
+}
 
 .m-r-5 {
-  margin-right: 5px; }
+  margin-right: 5px;
+}
 
 .m-r-10 {
-  margin-right: 10px; }
+  margin-right: 10px;
+}
 
 .m-r-15 {
-  margin-right: 15px; }
+  margin-right: 15px;
+}
 
 .m-r-20 {
-  margin-right: 20px; }
+  margin-right: 20px;
+}
 
 .m-r-25 {
-  margin-right: 25px; }
+  margin-right: 25px;
+}
 
 .m-r-30 {
-  margin-right: 30px; }
+  margin-right: 30px;
+}
 
 .m-r-35 {
-  margin-right: 35px; }
+  margin-right: 35px;
+}
 
 .m-r-40 {
-  margin-right: 40px; }
+  margin-right: 40px;
+}
 
 .m-r-45 {
-  margin-right: 45px; }
+  margin-right: 45px;
+}
 
 .m-r-50 {
-  margin-right: 50px; }
+  margin-right: 50px;
+}
 
 .m-b-0 {
-  margin-bottom: 0px; }
+  margin-bottom: 0px;
+}
 
 .m-b-5 {
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+}
 
 .m-b-10 {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+}
 
 .m-b-15 {
-  margin-bottom: 15px; }
+  margin-bottom: 15px;
+}
 
 .m-b-20 {
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+}
 
 .m-b-25 {
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+}
 
 .m-b-30 {
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+}
 
 .m-b-35 {
-  margin-bottom: 35px; }
+  margin-bottom: 35px;
+}
 
 .m-b-40 {
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+}
 
 .m-b-45 {
-  margin-bottom: 45px; }
+  margin-bottom: 45px;
+}
 
 .m-b-50 {
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+}
 
 .m-l-0 {
-  margin-left: 0px; }
+  margin-left: 0px;
+}
 
 .m-l-5 {
-  margin-left: 5px; }
+  margin-left: 5px;
+}
 
 .m-l-10 {
-  margin-left: 10px; }
+  margin-left: 10px;
+}
 
 .m-l-15 {
-  margin-left: 15px; }
+  margin-left: 15px;
+}
 
 .m-l-20 {
-  margin-left: 20px; }
+  margin-left: 20px;
+}
 
 .m-l-25 {
-  margin-left: 25px; }
+  margin-left: 25px;
+}
 
 .m-l-30 {
-  margin-left: 30px; }
+  margin-left: 30px;
+}
 
 .m-l-35 {
-  margin-left: 35px; }
+  margin-left: 35px;
+}
 
 .m-l-40 {
-  margin-left: 40px; }
+  margin-left: 40px;
+}
 
 .m-l-45 {
-  margin-left: 45px; }
+  margin-left: 45px;
+}
 
 .m-l-50 {
-  margin-left: 50px; }
+  margin-left: 50px;
+}
 
 .m-x-0 {
-  margin: 0px; }
+  margin: 0px;
+}
 
 .m-x-5 {
-  margin: 5px; }
+  margin: 5px;
+}
 
 .m-x-10 {
-  margin: 10px; }
+  margin: 10px;
+}
 
 .m-x-15 {
-  margin: 15px; }
+  margin: 15px;
+}
 
 .m-x-20 {
-  margin: 20px; }
+  margin: 20px;
+}
 
 .m-x-25 {
-  margin: 25px; }
+  margin: 25px;
+}
 
 .m-x-30 {
-  margin: 30px; }
+  margin: 30px;
+}
 
 .m-x-35 {
-  margin: 35px; }
+  margin: 35px;
+}
 
 .m-x-40 {
-  margin: 40px; }
+  margin: 40px;
+}
 
 .m-x-45 {
-  margin: 45px; }
+  margin: 45px;
+}
 
 .m-x-50 {
-  margin: 50px; }
+  margin: 50px;
+}
 
 .p-t-0 {
-  padding-top: 0px; }
+  padding-top: 0px;
+}
 
 .p-t-5 {
-  padding-top: 5px; }
+  padding-top: 5px;
+}
 
 .p-t-10 {
-  padding-top: 10px; }
+  padding-top: 10px;
+}
 
 .p-t-15 {
-  padding-top: 15px; }
+  padding-top: 15px;
+}
 
 .p-t-20 {
-  padding-top: 20px; }
+  padding-top: 20px;
+}
 
 .p-t-25 {
-  padding-top: 25px; }
+  padding-top: 25px;
+}
 
 .p-t-30 {
-  padding-top: 30px; }
+  padding-top: 30px;
+}
 
 .p-t-35 {
-  padding-top: 35px; }
+  padding-top: 35px;
+}
 
 .p-t-40 {
-  padding-top: 40px; }
+  padding-top: 40px;
+}
 
 .p-t-45 {
-  padding-top: 45px; }
+  padding-top: 45px;
+}
 
 .p-t-50 {
-  padding-top: 50px; }
+  padding-top: 50px;
+}
 
 .p-r-0 {
-  padding-right: 0px; }
+  padding-right: 0px;
+}
 
 .p-r-5 {
-  padding-right: 5px; }
+  padding-right: 5px;
+}
 
 .p-r-10 {
-  padding-right: 10px; }
+  padding-right: 10px;
+}
 
 .p-r-15 {
-  padding-right: 15px; }
+  padding-right: 15px;
+}
 
 .p-r-20 {
-  padding-right: 20px; }
+  padding-right: 20px;
+}
 
 .p-r-25 {
-  padding-right: 25px; }
+  padding-right: 25px;
+}
 
 .p-r-30 {
-  padding-right: 30px; }
+  padding-right: 30px;
+}
 
 .p-r-35 {
-  padding-right: 35px; }
+  padding-right: 35px;
+}
 
 .p-r-40 {
-  padding-right: 40px; }
+  padding-right: 40px;
+}
 
 .p-r-45 {
-  padding-right: 45px; }
+  padding-right: 45px;
+}
 
 .p-r-50 {
-  padding-right: 50px; }
+  padding-right: 50px;
+}
 
 .p-b-0 {
-  padding-bottom: 0px; }
+  padding-bottom: 0px;
+}
 
 .p-b-5 {
-  padding-bottom: 5px; }
+  padding-bottom: 5px;
+}
 
 .p-b-10 {
-  padding-bottom: 10px; }
+  padding-bottom: 10px;
+}
 
 .p-b-15 {
-  padding-bottom: 15px; }
+  padding-bottom: 15px;
+}
 
 .p-b-20 {
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+}
 
 .p-b-25 {
-  padding-bottom: 25px; }
+  padding-bottom: 25px;
+}
 
 .p-b-30 {
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+}
 
 .p-b-35 {
-  padding-bottom: 35px; }
+  padding-bottom: 35px;
+}
 
 .p-b-40 {
-  padding-bottom: 40px; }
+  padding-bottom: 40px;
+}
 
 .p-b-45 {
-  padding-bottom: 45px; }
+  padding-bottom: 45px;
+}
 
 .p-b-50 {
-  padding-bottom: 50px; }
+  padding-bottom: 50px;
+}
 
 .p-l-0 {
-  padding-left: 0px; }
+  padding-left: 0px;
+}
 
 .p-l-5 {
-  padding-left: 5px; }
+  padding-left: 5px;
+}
 
 .p-l-10 {
-  padding-left: 10px; }
+  padding-left: 10px;
+}
 
 .p-l-15 {
-  padding-left: 15px; }
+  padding-left: 15px;
+}
 
 .p-l-20 {
-  padding-left: 20px; }
+  padding-left: 20px;
+}
 
 .p-l-25 {
-  padding-left: 25px; }
+  padding-left: 25px;
+}
 
 .p-l-30 {
-  padding-left: 30px; }
+  padding-left: 30px;
+}
 
 .p-l-35 {
-  padding-left: 35px; }
+  padding-left: 35px;
+}
 
 .p-l-40 {
-  padding-left: 40px; }
+  padding-left: 40px;
+}
 
 .p-l-45 {
-  padding-left: 45px; }
+  padding-left: 45px;
+}
 
 .p-l-50 {
-  padding-left: 50px; }
+  padding-left: 50px;
+}
 
 .p-x-0 {
-  padding: 0px; }
+  padding: 0px;
+}
 
 .p-x-5 {
-  padding: 5px; }
+  padding: 5px;
+}
 
 .p-x-10 {
-  padding: 10px; }
+  padding: 10px;
+}
 
 .p-x-15 {
-  padding: 15px; }
+  padding: 15px;
+}
 
 .p-x-20 {
-  padding: 20px; }
+  padding: 20px;
+}
 
 .p-x-25 {
-  padding: 25px; }
+  padding: 25px;
+}
 
 .p-x-30 {
-  padding: 30px; }
+  padding: 30px;
+}
 
 .p-x-35 {
-  padding: 35px; }
+  padding: 35px;
+}
 
 .p-x-40 {
-  padding: 40px; }
+  padding: 40px;
+}
 
 .p-x-45 {
-  padding: 45px; }
+  padding: 45px;
+}
 
 .p-x-50 {
-  padding: 50px; }
+  padding: 50px;
+}
 
 .w-0 {
-  width: 0%; }
+  width: 0%;
+}
 
 .w-5 {
-  width: 5%; }
+  width: 5%;
+}
 
 .w-10 {
-  width: 10%; }
+  width: 10%;
+}
 
 .w-15 {
-  width: 15%; }
+  width: 15%;
+}
 
 .w-20 {
-  width: 20%; }
+  width: 20%;
+}
 
 .w-25 {
-  width: 25%; }
+  width: 25%;
+}
 
 .w-30 {
-  width: 30%; }
+  width: 30%;
+}
 
 .w-35 {
-  width: 35%; }
+  width: 35%;
+}
 
 .w-40 {
-  width: 40%; }
+  width: 40%;
+}
 
 .w-45 {
-  width: 45%; }
+  width: 45%;
+}
 
 .w-50 {
-  width: 50%; }
+  width: 50%;
+}
 
 .w-55 {
-  width: 55%; }
+  width: 55%;
+}
 
 .w-60 {
-  width: 60%; }
+  width: 60%;
+}
 
 .w-65 {
-  width: 65%; }
+  width: 65%;
+}
 
 .w-70 {
-  width: 70%; }
+  width: 70%;
+}
 
 .w-75 {
-  width: 75%; }
+  width: 75%;
+}
 
 .w-80 {
-  width: 80%; }
+  width: 80%;
+}
 
 .w-85 {
-  width: 85%; }
+  width: 85%;
+}
 
 .w-90 {
-  width: 90%; }
+  width: 90%;
+}
 
 .w-95 {
-  width: 95%; }
+  width: 95%;
+}
 
 .w-100 {
-  width: 100%; }
+  width: 100%;
+}
 
 .btn {
   color: white;
@@ -530,50 +727,66 @@
   text-align: center;
   font-size: 13px;
   font-weight: 500;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .btn-green {
-  background: #49c5b6; }
-  .btn-green:hover {
-    background: #37ae9f;
-    transition: all 0.3s ease; }
-  .btn-green:active {
-    background: #226c63; }
+  background: #49c5b6;
+}
+.btn-green:hover {
+  background: #37ae9f;
+  transition: all 0.3s ease;
+}
+.btn-green:active {
+  background: #226c63;
+}
 
 .btn-blue {
-  background: #9fd2d6; }
-  .btn-blue:hover {
-    background: #82c5ca;
-    transition: all 0.3s ease; }
-  .btn-blue:active {
-    background: #49a5ac; }
+  background: #9fd2d6;
+}
+.btn-blue:hover {
+  background: #82c5ca;
+  transition: all 0.3s ease;
+}
+.btn-blue:active {
+  background: #49a5ac;
+}
 
 .btn-orange {
-  background: #ff8601; }
-  .btn-orange:hover {
-    background: #d77100;
-    transition: all 0.3s ease; }
-  .btn-orange:active {
-    background: #814300; }
+  background: #ff8601;
+}
+.btn-orange:hover {
+  background: #d77100;
+  transition: all 0.3s ease;
+}
+.btn-orange:active {
+  background: #814300;
+}
 
 .btn-red {
-  background: #ff4e4e; }
-  .btn-red:hover {
-    background: #ff2525;
-    transition: all 0.3s ease; }
-  .btn-red:active {
-    background: #ce0000; }
+  background: #ff4e4e;
+}
+.btn-red:hover {
+  background: #ff2525;
+  transition: all 0.3s ease;
+}
+.btn-red:active {
+  background: #ce0000;
+}
 
 .fixed {
   position: fixed;
   right: 0;
   left: 0;
-  z-index: 1; }
+  z-index: 1;
+}
 
 .w-100 {
-  width: 100%; }
+  width: 100%;
+}
 
 .text-black {
-  color: black; }
+  color: black;
+}
 
 /*# sourceMappingURL=style.css.map */
